routes contact us and adds brochure

--- a/Services.html
+++ b/Services.html
@@ -37,7 +37,7 @@
 <body class="u-body">
   <header class="fixedposition u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-dd13">
     <div class="u-clearfix u-sheet u-sheet-1">
-      <a href="index.html#carousel_13fe" data-page-id="2206810918"
+      <a href="/index.html#contact_us" data-page-id="2206810918"
         class="u-btn u-button-style u-gradient u-none u-text-body-alt-color u-btn-1 responsiveContactusPosition">CONTACT US</a>
       <nav class="u-align-left u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="MD">
         <div class="menu-collapse responsiveHamburgerPosition"
@@ -141,13 +141,7 @@
             <li class="u-nav-item"><a
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
                 href="Support.html" style="padding: 10px 0px;">Support</a>
-              <div class="u-nav-popup">
-                <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-5">
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Support.html#sec-b7e7"
-                      data-page-id="521828048">FAQs</a>
-                  </li>
-                </ul>
-              </div>
+               
             </li>
           </ul>
         </div>
