--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body data-home-page="index.html" data-home-page-title="Home" class="u-body">
   <header class="fixedposition u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-dd13">
     <div class="u-clearfix u-sheet u-sheet-1">
-      <a href="index.html#carousel_13fe" data-page-id="2206810918"
+      <a href="/index.html#contact_us" data-page-id="2206810918"
         class="u-btn u-button-style u-gradient u-none u-text-body-alt-color u-btn-1 responsiveContactusPosition ">CONTACT US</a>
       <nav class="u-align-left u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="MD">
         <div class="menu-collapse responsiveHamburgerPosition"  
@@ -150,13 +150,7 @@
             <li class="u-nav-item "><a  
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
                 href="Support.html" style="padding: 10px 0px;">Support</a>
-              <div class="u-nav-popup">
-                <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-5">
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Support.html#sec-b7e7"
-                      data-page-id="521828048">FAQs</a>
-                  </li>
-                </ul>
-              </div>
+               
             </li>
           </ul>
         </div>
@@ -757,7 +751,7 @@
       </div>
     </div>
   </section>
-  <section class="u-align-center u-clearfix u-grey-10 u-valign-middle u-section-6 contactus_gradient" id="carousel_13fe">
+  <section class="u-align-center u-clearfix u-grey-10 u-valign-middle u-section-6 contactus_gradient" id="contact_us">
     <div class="u-expanded-width u-gradient u-shape u-shape-rectangle u-shape-1"></div>
     <div class="u-container-style u-group u-radius-10 u-shape-round u-white u-group-1">
       <div class="u-container-layout u-container-layout-1">
