--- a/About.html
+++ b/About.html
@@ -41,7 +41,7 @@
  <body class="u-body">
   <header class="fixedposition u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-dd13">
     <div class="u-clearfix u-sheet u-sheet-1">
-      <a href="index.html#carousel_13fe" data-page-id="2206810918"
+      <a href="/index.html#contact_us" data-page-id="2206810918"
         class="u-btn u-button-style u-gradient u-none u-text-body-alt-color u-btn-1 responsiveContactusPosition">CONTACT US</a>
       <nav class="u-align-left u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="MD">
         <div class="menu-collapse responsiveHamburgerPosition"
@@ -145,13 +145,6 @@
             <li class="u-nav-item"><a
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
                 href="Support.html" style="padding: 10px 0px;">Support</a>
-              <div class="u-nav-popup">
-                <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-5">
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Support.html#sec-b7e7"
-                      data-page-id="521828048">FAQs</a>
-                  </li>
-                </ul>
-              </div>
             </li>
           </ul>
         </div>
@@ -252,7 +245,7 @@
           <p class="u-text u-text-body-alt-color u-text-2">Ut enim ad minim veniam, quis nostrud exercitation ullamco
             laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
             esse cillum dolore eu fugiat nulla pariatur.</p>
-          <a href=""
+          <a href="./docs/brochure.pdf"
             class="u-active-palette-1-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-1-base u-radius-50 u-text-active-white u-text-hover-white u-text-palette-1-base u-white u-btn-1"> <i class="fa fa-solid fa-download"> &nbsp;</i>brochure 
             </a>
         </div>
@@ -267,128 +260,7 @@
       </div>
     </div>
   </section>
-  <!-- <section class="upper_margin u-clearfix u-expanded-width-xl u-image u-section-2" id="carousel_1182" data-image-width="1920"
-    data-image-height="987">
-    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-      <div class="u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-1">
-        <div class="u-gutter-0 u-layout">
-          <div class="u-layout-row">
-            <div
-              class="u-align-left u-container-style u-layout-cell u-palette-2-base u-radius-25 u-shape-round u-size-27-lg u-size-27-xl u-size-30-md u-size-30-sm u-size-30-xs u-layout-cell-1">
-              <div class="u-container-layout u-container-layout-1">
-                <h6 class="u-text u-text-default u-text-1">Contact us</h6>
-                <h2 class="u-text u-text-2">Feel free to contact us. We are ready to answer &amp; help you.</h2>
-                <p class="u-text u-text-3">3045 10 Sunrize Avenue, 123-456-7890<br>Mon – Fri: 9:00 am – 8:00 pm,<br>Sat
-                  – Sun: 9:00 am – 10 pm<br>
-                  <a href="mailto:support@archisman.com"
-                    class="u-active-none u-border-2 u-border-active-palette-2-light-2 u-border-hover-palette-2-light-2 u-border-palette-4-light-2 u-btn u-button-link u-button-style u-hover-none u-none u-text-active-palette-2-light-2 u-text-hover-palette-2-light-2 u-text-palette-4-light-1 u-btn-1">support@archisman.com</a>
-                </p>
-                <h2 class="u-text u-text-default u-text-4">Follow us</h2>
-                <div class="u-align-left u-social-icons u-spacing-10 u-social-icons-1">
-                  <a class="u-social-url" target="_blank" href="https://facebook.com/facebook.com"><span
-                      class="u-icon u-icon-circle u-social-facebook u-social-icon u-text-white u-icon-1">
-                      <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style="">
-                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-87ce"></use>
-                      </svg>
-                      <svg x="0px" y="0px" viewBox="0 0 112 112" id="svg-87ce" class="u-svg-content">
-                        <path
-                          d="M75.5,28.8H65.4c-1.5,0-4,0.9-4,4.3v9.4h13.9l-1.5,15.8H61.4v45.1H42.8V58.3h-8.8V42.4h8.8V32.2 c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z">
-                        </path>
-                      </svg>
-                    </span>
-                  </a>
-                  <a class="u-social-url" target="_blank" href="https://twitter.com/twitter.com"><span
-                      class="u-icon u-icon-circle u-social-icon u-social-twitter u-text-white u-icon-2">
-                      <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style="">
-                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-88a8"></use>
-                      </svg>
-                      <svg x="0px" y="0px" viewBox="0 0 112 112" id="svg-88a8" class="u-svg-content">
-                        <path
-                          d="M92.2,38.2c0,0.8,0,1.6,0,2.3c0,24.3-18.6,52.4-52.6,52.4c-10.6,0.1-20.2-2.9-28.5-8.2 c1.4,0.2,2.9,0.2,4.4,0.2c8.7,0,16.7-2.9,23-7.9c-8.1-0.2-14.9-5.5-17.3-12.8c1.1,0.2,2.4,0.2,3.4,0.2c1.6,0,3.3-0.2,4.8-0.7 c-8.4-1.6-14.9-9.2-14.9-18c0-0.2,0-0.2,0-0.2c2.5,1.4,5.4,2.2,8.4,2.3c-5-3.3-8.3-8.9-8.3-15.4c0-3.4,1-6.5,2.5-9.2 c9.1,11.1,22.7,18.5,38,19.2c-0.2-1.4-0.4-2.8-0.4-4.3c0.1-10,8.3-18.2,18.5-18.2c5.4,0,10.1,2.2,13.5,5.7c4.3-0.8,8.1-2.3,11.7-4.5 c-1.4,4.3-4.3,7.9-8.1,10.1c3.7-0.4,7.3-1.4,10.6-2.9C98.9,32.3,95.7,35.5,92.2,38.2z">
-                        </path>
-                      </svg>
-                    </span>
-                  </a>
-                  <a class="u-social-url" target="_blank" href="https://www.instagram.com/instagram.com"><span
-                      class="u-icon u-icon-circle u-social-icon u-social-instagram u-text-white u-icon-3">
-                      <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style="">
-                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-694e"></use>
-                      </svg>
-                      <svg x="0px" y="0px" viewBox="0 0 112 112" id="svg-694e" class="u-svg-content">
-                        <path
-                          d="M55.9,32.9c-12.8,0-23.2,10.4-23.2,23.2s10.4,23.2,23.2,23.2s23.2-10.4,23.2-23.2S68.7,32.9,55.9,32.9z M55.9,69.4c-7.4,0-13.3-6-13.3-13.3c-0.1-7.4,6-13.3,13.3-13.3s13.3,6,13.3,13.3C69.3,63.5,63.3,69.4,55.9,69.4z">
-                        </path>
-                        <path
-                          d="M79.7,26.8c-3,0-5.4,2.5-5.4,5.4s2.5,5.4,5.4,5.4c3,0,5.4-2.5,5.4-5.4S82.7,26.8,79.7,26.8z">
-                        </path>
-                        <path
-                          d="M78.2,11H33.5C21,11,10.8,21.3,10.8,33.7v44.7c0,12.6,10.2,22.8,22.7,22.8h44.7c12.6,0,22.7-10.2,22.7-22.7 V33.7C100.8,21.1,90.6,11,78.2,11z M91,78.4c0,7.1-5.8,12.8-12.8,12.8H33.5c-7.1,0-12.8-5.8-12.8-12.8V33.7 c0-7.1,5.8-12.8,12.8-12.8h44.7c7.1,0,12.8,5.8,12.8,12.8V78.4z">
-                        </path>
-                      </svg>
-                    </span>
-                  </a>
-                  <a class="u-social-url" target="_blank" href="https://linkedin.com/in/linkedin.com"><span
-                      class="u-icon u-icon-circle u-social-icon u-social-linkedin u-text-white u-icon-4">
-                      <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style="">
-                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1f32"></use>
-                      </svg>
-                      <svg x="0px" y="0px" viewBox="0 0 112 112" id="svg-1f32" class="u-svg-content">
-                        <path
-                          d="M33.8,96.8H14.5v-58h19.3V96.8z M24.1,30.9L24.1,30.9c-6.6,0-10.8-4.5-10.8-10.1c0-5.8,4.3-10.1,10.9-10.1 S34.9,15,35.1,20.8C35.1,26.4,30.8,30.9,24.1,30.9z M103.3,96.8H84.1v-31c0-7.8-2.7-13.1-9.8-13.1c-5.3,0-8.5,3.6-9.9,7.1 c-0.6,1.3-0.6,3-0.6,4.8V97H44.5c0,0,0.3-52.6,0-58h19.3v8.2c2.6-3.9,7.2-9.6,17.4-9.6c12.7,0,22.2,8.4,22.2,26.1V96.8z">
-                        </path>
-                      </svg>
-                    </span>
-                  </a>
-                </div>
-                <p class="u-text u-text-5">©2022 Privacy policy</p>
-              </div>
-            </div>
-            <div
-              class="u-align-center u-container-style u-layout-cell u-shape-rectangle u-size-30-md u-size-30-sm u-size-30-xs u-size-33-lg u-size-33-xl u-layout-cell-2">
-              <div class="u-container-layout u-valign-middle u-container-layout-2">
-                <div class="u-expanded-width-xs u-form u-radius-25 u-white u-form-1">
-                  <form action="#" method="POST" class="u-clearfix u-form-spacing-30 u-form-vertical u-inner-form"
-                    style="padding: 30px;" source="custom" name="form">
-                    <div class="u-form-group u-form-name">
-                      <label for="name-3b9a" class="u-form-control-hidden u-label" wfd-invisible="true">Name</label>
-                      <input type="text" placeholder="Enter your Name" id="name-3b9a" name="name"
-                        class="u-border-3 u-border-grey-25 u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-1"
-                        required="">
-                    </div>
-                    <div class="u-form-email u-form-group">
-                      <label for="email-3b9a" class="u-form-control-hidden u-label" wfd-invisible="true">Email</label>
-                      <input type="email" placeholder="Enter a valid email address" id="email-3b9a" name="email"
-                        class="u-border-3 u-border-grey-25 u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-2"
-                        required="">
-                    </div>
-                    <div class="u-form-group u-form-message">
-                      <label for="message-3b9a" class="u-form-control-hidden u-label"
-                        wfd-invisible="true">Message</label>
-                      <textarea placeholder="Enter your message" rows="4" cols="50" id="message-3b9a" name="message"
-                        class="u-border-3 u-border-grey-25 u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-3"
-                        required=""></textarea>
-                    </div>
-                    <div class="u-align-left u-form-group u-form-submit">
-                      <a href="#"
-                        class="u-active-palette-2-light-1 u-border-none u-btn u-btn-round u-btn-submit u-button-style u-hover-palette-2-light-1 u-palette-2-base u-radius-20 u-text-active-white u-text-body-alt-color u-text-hover-white u-btn-2">Submit</a>
-                      <input type="submit" value="submit" class="u-form-control-hidden" wfd-invisible="true">
-                    </div>
-                    <div class="u-form-send-message u-form-send-success" wfd-invisible="true"> Thank you! Your message
-                      has been sent. </div>
-                    <div class="u-form-send-error u-form-send-message" wfd-invisible="true"> Unable to send your
-                      message. Please fix errors then try again. </div>
-                    <input type="hidden" value="" name="recaptchaResponse" wfd-invisible="true">
-                  </form>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-  
-
+ 
   <section class="about alt_bgcolor padding_in_btw">
     <div class="container">
       <div class="row d-flex flex-row-reverse">
