--- a/index.html
+++ b/index.html
@@ -309,32 +309,40 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./images/dataScience_homepage_1.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Data Science</h5>
-              <p>Some representative placeholder content for the first slide.</p>
-            </div>
+            <a href="/Services.html#data_science">
+              <img src="./images/dataScience_homepage_1.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Data Science</h5>
+                <p>Some representative placeholder content for the first slide.</p>
+              </div>
+            </a>
           </div>
           <div class="carousel-item">
-            <img src="./images/random_bg_3.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Data Analysis</h5>
-              <p>Some representative placeholder content for the second slide.</p>
-            </div>
+            <a href="/Services.html#data_analysis">
+              <img src="./images/random_bg_3.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Data Analysis</h5>
+                <p>Some representative placeholder content for the second slide.</p>
+              </div>
+            </a>
           </div>
           <div class="carousel-item">
-            <img src="./images/random_bg_2.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Data Engineering</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
+            <a href="/Services.html#data_analysis">
+              <img src="./images/random_bg_2.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Data Engineering</h5>
+                <p>Some representative placeholder content for the third slide.</p>
+              </div>
+            </a>
           </div>
           <div class="carousel-item">
-            <img src="./images/businessintelligence_homepage_1.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Business Intelligence</h5>
-              <p>Some representative placeholder content for the second slide.</p>
-            </div>
+            <a href="/Services.html#business_intelligence">
+              <img src="./images/businessintelligence_homepage_1.png" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Business Intelligence</h5>
+                <p>Some representative placeholder content for the second slide.</p>
+              </div>
+            </a>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -351,7 +359,7 @@
     <p class="u-text u-text-2"> <strong>In mollis nunc sed id semper risus in hendrerit gravida. Aliquet enim tortor at auctor
       urna nunc id cursus. Risus at ultrices mi tempus </strong></p>
       <div style="display: flex; justify-content: center; width: 100%;" >
-        <a href="index.html#carousel_64ac" data-page-id="2206810918"
+        <a href="Services.html" data-page-id="2206810918"
         class="u-btn u-border-none u-btn-round u-button-style u-color-scheme-summer-time u-color-style-multicolor-1 u-palette-1-base u-radius-50 u-btn-1">Read more</a>
       </div>
 
@@ -649,7 +657,7 @@
         </div>
       </div>
       <div style="display: flex; justify-content: right; width: 100%;" >
-        <a href="index.html#carousel_64ac" data-page-id="2206810918"
+        <a href="Industries.html" data-page-id="2206810918"
         style="font-size: larger; color: whitesmoke; text-decoration: none; margin-bottom: 30px;">Read more...</a>
       </div>
       </div>
@@ -739,7 +747,7 @@
                 <div
                   class="u-container-style u-hidden-sm u-hidden-xs u-layout-cell u-right-cell u-size-20 u-size-60-md u-layout-cell-8">
                   <div class="u-container-layout u-container-layout-8">
-                    <a href="About.html#carousel_b831" data-page-id="48129665"
+                    <a href="About.html" data-page-id="48129665"
                       class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-1">know
                       more</a>
                   </div>
