--- a/Support.html
+++ b/Support.html
@@ -331,7 +331,7 @@
       <!--Grid row-->
       <div class="row my-4">
         <!--Grid column-->
-        <div class="col-lg-3 mx-auto col-md-6 mb-4 mb-md-0">
+        <div class="col-lg-4 mx-auto col-md-6 mb-4 mb-md-0">
 
           <div
             class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto"
@@ -394,7 +394,7 @@
           <h5 class="text-uppercase margin-gap
               margin-gap mb-4">Industries</h5>
 
-          <ul class="list-unstyled">
+          <!-- <ul class="list-unstyled">
             <li class="mb-2">
               <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Retail</a>
             </li>
@@ -412,7 +412,7 @@
             </li>
             <li class="mb-2">
               <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Manufacturing</a>
-            </li>
+            </li> -->
             <!-- <li class="mb-2">
               <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Volunteer activities</a>
             </li> --> 
