routing in navbar correct of home page

--- a/About.html
+++ b/About.html
@@ -115,7 +115,7 @@
                       data-page-id="976527205">Real Estate</a>
                   </li>
                   <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#sec-ac3a"
-                      data-page-id="976527205">Financial Sector</a>
+                      data-page-id="976527205">Finance</a>
                   </li>
                   <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#sec-ac3a"
                       data-page-id="976527205">Logistics</a>
@@ -187,7 +187,7 @@
                           data-page-id="976527205">Real Estate</a>
                       </li>
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#sec-ac3a"
-                          data-page-id="976527205">Financial Sector</a>
+                          data-page-id="976527205">Finance</a>
                       </li>
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#sec-ac3a"
                           data-page-id="976527205">Logistics</a>
@@ -234,7 +234,8 @@
       </a>
     </div>
   </header>
-  <section class="u-align-center u-clearfix u-section-1" id="carousel_b831">
+
+  <section id="about_us" class="u-align-center u-clearfix u-section-1">
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <div class="u-palette-2-dark-1 u-shape u-shape-circle u-shape-1"></div>
       <img class="u-image u-image-1" src="images/2cd8810a-2002-afce-79ce-a321438ebdfe.jpg" data-image-width="1000"
@@ -261,7 +262,7 @@
     </div>
   </section>
  
-  <section class="about alt_bgcolor padding_in_btw">
+  <section id="our_vision" class="about alt_bgcolor padding_in_btw">
     <div class="container">
       <div class="row d-flex flex-row-reverse">
         <div class="col-lg-6 img_padding_mv padding_rl" data-aos="zoom-in">
@@ -289,71 +290,35 @@
     </div>
   </section>
 
+  <section  id="why_us" class="about margin_bottom">
+    <div class="container">
 
-    <section  id="about" class="about margin_bottom">
-      <div class="container">
-
-        <div class="row">
-          <div class="col-lg-6" data-aos="zoom-in">
-            <img src="./images/whyus_aboutpage_1.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-6 d-flex flex-column justify-contents-center padding_rl" data-aos="fade-left">
-            <div class="content pt-4 pt-lg-0">
-              <h3>Why us</h3>
-              <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
-              </p>
-              <ul>
-                <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperd</li>
-              </ul>
-              <p>
-                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate tera noden carma palorp mades tera.
-              </p>
-            </div>
+      <div class="row">
+        <div class="col-lg-6" data-aos="zoom-in">
+          <img src="./images/whyus_aboutpage_1.jpg" class="img-fluid" alt="">
+        </div>
+        <div class="col-lg-6 d-flex flex-column justify-contents-center padding_rl" data-aos="fade-left">
+          <div class="content pt-4 pt-lg-0">
+            <h3>Why us</h3>
+            <p class="fst-italic">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+              magna aliqua.
+            </p>
+            <ul>
+              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+              <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperd</li>
+            </ul>
+            <p>
+              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate tera noden carma palorp mades tera.
+            </p>
           </div>
         </div>
-
       </div>
-    </section>
 
-   
-
-
-    <!-- <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-      
-      <h3 class="u-text u-text-1">Our Vision<br>
-      </h3>
-      <p class="u-text u-text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation <a href=""
-          class="u-border-2 u-border-black u-border-hover-palette-1-base u-btn u-button-style u-none u-text-body-color u-btn-1">ullamco
-          laboris</a> nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
-      </p>
-    </div> -->
-  
-  <!-- <section class=" u-clearfix u-section-3" id="sec-ec75">
-    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-      <h3 class="u-text u-text-1">Why Us ?<br>
-      </h3>
-      <p class="u-text u-text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation <a href=""
-          class="u-border-2 u-border-black u-border-hover-palette-1-base u-btn u-button-style u-none u-text-body-color u-btn-1">ullamco
-          laboris</a> nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
-      </p>
     </div>
-  </section> -->
+  </section>
+
 
   <!--           *******************Our footer *********************** -->
  
@@ -438,7 +403,7 @@
               <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Real State</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Financial Sector</a>
+              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Finance</a>
             </li>
             <li class="mb-2">
               <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Logistics</a>
