--- a/Industries.html
+++ b/Industries.html
@@ -110,7 +110,7 @@
                       data-page-id="976527205">Real Estate</a>
                   </li>
                   <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#sec-ac3a"
-                      data-page-id="976527205">Financial Sector</a>
+                      data-page-id="976527205">Finance</a>
                   </li>
                   <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#sec-ac3a"
                       data-page-id="976527205">Logistics</a>
@@ -183,7 +183,7 @@
                           data-page-id="976527205">Real Estate</a>
                       </li>
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#sec-ac3a"
-                          data-page-id="976527205">Financial Sector</a>
+                          data-page-id="976527205">Finance</a>
                       </li>
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#sec-ac3a"
                           data-page-id="976527205">Logistics</a>
@@ -236,35 +236,35 @@
         <ul class="u-spacing-30 u-tab-list u-unstyled" role="tablist">
           <li class="u-tab-item" role="presentation">
             <a class="removing_underline active u-active-palette-2-base u-button-style u-tab-link u-tab-link-1"
-              id="link-tab-081f" href="#tab-081f" role="tab" aria-controls="tab-081f" aria-selected="true">Retail</a>
+              id="link-retail" href="#retail" role="tab" aria-controls="retail" aria-selected="true">Retail</a>
           </li>
           <li class="u-tab-item" role="presentation">
             <a class="removing_underline u-active-palette-2-base u-button-style u-tab-link u-tab-link-2"
-              id="link-tab-4d57" href="#tab-4d57" role="tab" aria-controls="tab-4d57" aria-selected="false">Health
+              id="link-healthcare" href="#healthcare" role="tab" aria-controls="healthcare" aria-selected="false">Health
               Care</a>
           </li>
           <li class="u-tab-item" role="presentation">
             <a class="removing_underline u-active-palette-2-base u-button-style u-tab-link u-tab-link-3"
-              id="link-tab-3a42" href="#tab-3a42" role="tab" aria-controls="tab-3a42" aria-selected="false">Real
+              id="link-realestate" href="#realestate" role="tab" aria-controls="realestate" aria-selected="false">Real
               Estate</a>
           </li>
           <li class="u-tab-item u-tab-item-4" role="presentation">
-            <a class="removing_underline u-active-palette-2-base u-button-style u-tab-link u-tab-link-4" id="tab-d7e7"
-              href="#link-tab-d7e7" role="tab" aria-controls="link-tab-d7e7" aria-selected="false">Financial Sector</a>
+            <a class="removing_underline u-active-palette-2-base u-button-style u-tab-link u-tab-link-4" id="link-finance"
+              href="#finance" role="tab" aria-controls="finance" aria-selected="false">Finance</a>
           </li>
           <li class="u-tab-item u-tab-item-5" role="presentation">
-            <a class="removing_underline u-active-palette-2-base u-button-style u-tab-link u-tab-link-5" id="tab-6219"
-              href="#link-tab-6219" role="tab" aria-controls="link-tab-6219" aria-selected="false">Logistics</a>
+            <a class="removing_underline u-active-palette-2-base u-button-style u-tab-link u-tab-link-5" id="link-logistics"
+              href="#logistics" role="tab" aria-controls="logistics" aria-selected="false">Logistics</a>
           </li>
           <li class="u-tab-item" role="presentation">
             <a class="removing_underline u-active-palette-2-base u-button-style u-tab-link u-tab-link-6"
-              id="link-tab-f599" href="#tab-f599" role="tab" aria-controls="tab-f599"
+              id="link-manufacturing" href="#manufacturing" role="tab" aria-controls="manufacturing"
               aria-selected="false">Manufacturing</a>
           </li>
         </ul>
         <div class="u-tab-content">
-          <div class="u-container-style u-tab-active u-tab-pane" id="tab-081f" role="tabpanel"
-            aria-labelledby="link-tab-081f">
+          <div class="u-container-style u-tab-active u-tab-pane" id="retail" role="tabpanel"
+            aria-labelledby="link-retail">
             <div class="u-container-layout u-container-layout-1">
               <img class="industries_images" src="./images/retail_industries-2.jpg" alt="">
               <h4 class="u-text u-text-default u-text-1">Description</h4>
@@ -280,7 +280,7 @@
                 Dramatically engage top-line web services vis-a-vis cutting-edge deliverables.</p>
             </div>
           </div>
-          <div class="u-container-style u-tab-pane" id="tab-4d57" role="tabpanel" aria-labelledby="link-tab-4d57">
+          <div class="u-container-style u-tab-pane" id="healthcare" role="tabpanel" aria-labelledby="link-healthcare">
             <div class="u-container-layout u-container-layout-2">
               <img class="industries_images" src="./images/healthcare_industries_2.png" alt="">
               <h4 class="u-text u-text-default u-text-5">The Basics of Shipping</h4>
@@ -293,7 +293,7 @@
               </ul>
             </div>
           </div>
-          <div class="u-container-style u-tab-pane" id="tab-3a42" role="tabpanel" aria-labelledby="link-tab-3a42">
+          <div class="u-container-style u-tab-pane" id="realestate" role="tabpanel" aria-labelledby="link-realestate">
             <div class="u-container-layout u-container-layout-3">
               <img class="industries_images" src="./images/realestate_industries_2.webp" alt="">
               <h4 class="u-text u-text-default u-text-1">Description</h4>
@@ -309,7 +309,7 @@
                 Dramatically engage top-line web services vis-a-vis cutting-edge deliverables.</p>
             </div>
           </div>
-          <div class="u-container-style u-tab-pane" id="link-tab-d7e7" role="tabpanel" aria-labelledby="tab-d7e7">
+          <div class="u-container-style u-tab-pane" id="finance" role="tabpanel" aria-labelledby="link-finance">
             <div class="u-container-layout u-container-layout-4">
               <img class="industries_images" src="./images/financial_industries_2.jpg" alt="">
               <h4 class="u-text u-text-default u-text-5">The Basics of Shipping</h4>
@@ -321,7 +321,7 @@
                 <li>Transnet Port Terminals (formerly known as Portnet, SAPO)</li>
               </ul></div>
           </div>
-          <div class="u-container-style u-tab-pane" id="link-tab-6219" role="tabpanel" aria-labelledby="tab-6219">
+          <div class="u-container-style u-tab-pane" id="logistics" role="tabpanel" aria-labelledby="link-logistics">
             <div class="u-container-layout u-container-layout-5">
               <img class="industries_images" src="./images/logistics_industries_2.jpg" alt="">
               <h4 class="u-text u-text-default u-text-1">Description</h4>
@@ -335,7 +335,7 @@
               parallel platforms. Holisticly predominate extensible testing procedures for reliable supply chains.
               Dramatically engage top-line web services vis-a-vis cutting-edge deliverables.</p></div>
           </div>
-          <div class="u-container-style u-tab-pane" id="tab-f599" role="tabpanel" aria-labelledby="link-tab-f599">
+          <div class="u-container-style u-tab-pane" id="manufacturing" role="tabpanel" aria-labelledby="link-manufacturing">
             <div class="u-container-layout u-container-layout-6">
               <img class="industries_images" src="./images/manufacturing_industries_2.jpg" alt="">
               <h4 class="u-text u-text-default u-text-5">The Basics of Shipping</h4>
@@ -433,7 +433,7 @@
               <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Real State</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Financial Sector</a>
+              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Finance</a>
             </li>
             <li class="mb-2">
               <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Logistics</a>
