--- a/Services.html
+++ b/Services.html
@@ -111,7 +111,7 @@
                       data-page-id="976527205">Real Estate</a>
                   </li>
                   <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#sec-ac3a"
-                      data-page-id="976527205">Financial Sector</a>
+                      data-page-id="976527205">Finance</a>
                   </li>
                   <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#sec-ac3a"
                       data-page-id="976527205">Logistics</a>
@@ -184,7 +184,7 @@
                           data-page-id="976527205">Real Estate</a>
                       </li>
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#sec-ac3a"
-                          data-page-id="976527205">Financial Sector</a>
+                          data-page-id="976527205">Finance</a>
                       </li>
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#sec-ac3a"
                           data-page-id="976527205">Logistics</a>
@@ -433,7 +433,7 @@
               <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Real State</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Financial Sector</a>
+              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Finance</a>
             </li>
             <li class="mb-2">
               <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Logistics</a>
