--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
                 href="About.html" style="padding: 10px 0px;">About</a>
               <div class="u-nav-popup">
                 <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-2">
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="About.html#carousel_b831"
+                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="About.html#about_us"
                       data-page-id="48129665">About Us</a>
                   </li>
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="About.html#carousel_1182"
+                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="About.html#our_vision"
                       data-page-id="48129665">Our Vision</a>
                   </li>
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="About.html#sec-ec75"
+                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="About.html#why_us"
                       data-page-id="48129665">Why Us</a>
                   </li>
                 </ul>
@@ -110,22 +110,22 @@
                 href="Industries.html" style="padding: 10px 0px;">Industries</a>
               <div class="u-nav-popup">
                 <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-3">
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#sec-ac3a"
+                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#retail"
                       data-page-id="976527205">Retail</a>
                   </li>
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#sec-ac3a"
+                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#healthcare"
                       data-page-id="976527205">Healthcare</a>
                   </li>
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#sec-ac3a"
+                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#realestate"
                       data-page-id="976527205">Real Estate</a>
                   </li>
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#sec-ac3a"
-                      data-page-id="976527205">Financial Sector</a>
+                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#finance"
+                      data-page-id="976527205">Finance</a>
                   </li>
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#sec-ac3a"
+                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#logistics"
                       data-page-id="976527205">Logistics</a>
                   </li>
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#sec-ac3a"
+                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#manufacturing"
                       data-page-id="976527205">Manufacturing</a>
                   </li>
                 </ul>
@@ -167,13 +167,13 @@
                     style="padding: 10px 0px;">About</a>
                   <div class="u-nav-popup">
                     <ul class="text-left-mobileview-padding u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-7">
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html#carousel_b831"
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html#about_us"
                           data-page-id="48129665">About Us</a>
                       </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html#carousel_1182"
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html#our_vision"
                           data-page-id="48129665">Our Vision</a>
                       </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html#sec-ec75"
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html#why_us"
                           data-page-id="48129665">Why Us</a>
                       </li>
                     </ul>
@@ -183,22 +183,22 @@
                     style="padding: 10px 0px;">Industries</a>
                   <div class="u-nav-popup">
                     <ul class="text-left-mobileview-padding u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-8">
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#sec-ac3a"
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#retail"
                           data-page-id="976527205">Retail</a>
                       </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#sec-ac3a"
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#healthcare"
                           data-page-id="976527205">Healthcare</a>
                       </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#sec-ac3a"
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#realestate"
                           data-page-id="976527205">Real Estate</a>
                       </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#sec-ac3a"
-                          data-page-id="976527205">Financial Sector</a>
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#finance"
+                          data-page-id="976527205">Finance</a>
                       </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#sec-ac3a"
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#logistics"
                           data-page-id="976527205">Logistics</a>
                       </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#sec-ac3a"
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#manufacturing"
                           data-page-id="976527205">Manufacturing</a>
                       </li>
                     </ul>
@@ -240,6 +240,7 @@
       </a>
     </div>
   </header>
+
   <section class="u-clearfix u-image u-shading u-section-1" id="carousel_b893">
     <div class="u-clearfix u-sheet u-sheet-1">
       <div class="u-clearfix u-expanded-width u-gutter-0 u-layout-spacing-vertical u-layout-wrap u-layout-wrap-1">
@@ -997,7 +998,7 @@
               <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Real State</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Financial Sector</a>
+              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Finance</a>
             </li>
             <li class="mb-2">
               <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Logistics</a>
