navbar fix in all pages

--- a/index.html
+++ b/index.html
@@ -110,22 +110,22 @@
                 href="Industries.html" style="padding: 10px 0px;">Industries</a>
               <div class="u-nav-popup">
                 <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-3">
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#retail"
+                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#link-retail"
                       data-page-id="976527205">Retail</a>
                   </li>
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#healthcare"
+                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#link-healthcare"
                       data-page-id="976527205">Healthcare</a>
                   </li>
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#realestate"
+                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#link-realestate"
                       data-page-id="976527205">Real Estate</a>
                   </li>
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#finance"
+                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#link-finance"
                       data-page-id="976527205">Finance</a>
                   </li>
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#logistics"
+                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#link-logistics"
                       data-page-id="976527205">Logistics</a>
                   </li>
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#manufacturing"
+                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#link-manufacturing"
                       data-page-id="976527205">Manufacturing</a>
                   </li>
                 </ul>
@@ -183,22 +183,22 @@
                     style="padding: 10px 0px;">Industries</a>
                   <div class="u-nav-popup">
                     <ul class="text-left-mobileview-padding u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-8">
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#retail"
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#link-retail"
                           data-page-id="976527205">Retail</a>
                       </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#healthcare"
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#link-healthcare"
                           data-page-id="976527205">Healthcare</a>
                       </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#realestate"
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#link-realestate"
                           data-page-id="976527205">Real Estate</a>
                       </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#finance"
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#link-finance"
                           data-page-id="976527205">Finance</a>
                       </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#logistics"
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#link-logistics"
                           data-page-id="976527205">Logistics</a>
                       </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#manufacturing"
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#link-manufacturing"
                           data-page-id="976527205">Manufacturing</a>
                       </li>
                     </ul>
