--- a/Industries.html
+++ b/Industries.html
@@ -37,9 +37,9 @@
   <header class="fixedposition u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-dd13">
     <div class="u-clearfix u-sheet u-sheet-1">
       <a href="/index.html#contact_us" data-page-id="2206810918"
-        class="u-btn u-button-style u-gradient u-none u-text-body-alt-color u-btn-1 responsiveContactusPosition">CONTACT US</a>
+        class="u-btn u-button-style u-gradient u-none u-text-body-alt-color u-btn-1 responsiveContactusPosition ">CONTACT US</a>
       <nav class="u-align-left u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="MD">
-        <div class="menu-collapse responsiveHamburgerPosition"
+        <div class="menu-collapse responsiveHamburgerPosition"  
           style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; text-transform: uppercase;">
           <a class="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link"
             href="#">
@@ -74,54 +74,33 @@
         </div>
         <div class="u-custom-menu u-nav-container">
           <ul class="u-nav u-spacing-30 u-unstyled u-nav-1">
-            <li class="u-nav-item"><a
+            <li class="u-nav-item "><a   
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
                 href="index.html" style="padding: 10px 0px;">Home</a>
             </li>
-            <li class="u-nav-item"><a
+            <li class="u-nav-item "><a  
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
                 href="About.html" style="padding: 10px 0px;">About</a>
               <div class="u-nav-popup">
                 <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-2">
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="About.html#carousel_b831"
+                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="About.html#about_us"
                       data-page-id="48129665">About Us</a>
                   </li>
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="About.html#carousel_1182"
+                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="About.html#our_vision"
                       data-page-id="48129665">Our Vision</a>
                   </li>
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="About.html#sec-ec75"
+                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="About.html#why_us"
                       data-page-id="48129665">Why Us</a>
                   </li>
                 </ul>
               </div>
             </li>
-            <li class="u-nav-item"><a
+            <li class="u-nav-item "><a  
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
                 href="Industries.html" style="padding: 10px 0px;">Industries</a>
-              <div class="u-nav-popup">
-                <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-3">
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#sec-ac3a"
-                      data-page-id="976527205">Retail</a>
-                  </li>
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#sec-ac3a"
-                      data-page-id="976527205">Healthcare</a>
-                  </li>
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#sec-ac3a"
-                      data-page-id="976527205">Real Estate</a>
-                  </li>
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#sec-ac3a"
-                      data-page-id="976527205">Finance</a>
-                  </li>
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#sec-ac3a"
-                      data-page-id="976527205">Logistics</a>
-                  </li>
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#sec-ac3a"
-                      data-page-id="976527205">Manufacturing</a>
-                  </li>
-                </ul>
-              </div>
+              
             </li>
-            <li class="u-nav-item"><a
+            <li class="u-nav-item "><a  
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
                 href="Services.html" style="padding: 10px 0px;">Services</a>
               <!-- <div class="u-nav-popup">
@@ -137,7 +116,7 @@
                 </ul>
               </div> -->
             </li>
-            <li class="u-nav-item"><a
+            <li class="u-nav-item "><a  
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
                 href="Support.html" style="padding: 10px 0px;">Support</a>
                
@@ -149,7 +128,7 @@
             class="u-align-center u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
             <div class="u-inner-container-layout u-sidenav-overflow">
               <div class="u-menu-close"></div>
-              <ul class="text-left-mobileview u-align-center u-nav u-popupmenu-items u-unstyled u-nav-6">
+              <ul class="u-align-center text-left-mobileview u-nav u-popupmenu-items u-unstyled u-nav-6">
                 <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="index.html"
                     style="padding: 10px 0px;">Home</a>
                 </li>
@@ -157,42 +136,21 @@
                     style="padding: 10px 0px;">About</a>
                   <div class="u-nav-popup">
                     <ul class="text-left-mobileview-padding u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-7">
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html#carousel_b831"
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html#about_us"
                           data-page-id="48129665">About Us</a>
                       </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html#carousel_1182"
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html#our_vision"
                           data-page-id="48129665">Our Vision</a>
                       </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html#sec-ec75"
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html#why_us"
                           data-page-id="48129665">Why Us</a>
                       </li>
                     </ul>
                   </div>
                 </li>
-                <li class="u-nav-item toMakeTextResponsive><a class="u-button-style u-nav-link" href="Industries.html"
-                  style="padding: 10px 0px;">Industries</a>
-                  <div class="u-nav-popup">
-                    <ul class="text-left-mobileview-padding u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-8">
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#sec-ac3a"
-                          data-page-id="976527205">Retail</a>
-                      </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#sec-ac3a"
-                          data-page-id="976527205">Healthcare</a>
-                      </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#sec-ac3a"
-                          data-page-id="976527205">Real Estate</a>
-                      </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#sec-ac3a"
-                          data-page-id="976527205">Finance</a>
-                      </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#sec-ac3a"
-                          data-page-id="976527205">Logistics</a>
-                      </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#sec-ac3a"
-                          data-page-id="976527205">Manufacturing</a>
-                      </li>
-                    </ul>
-                  </div>
+                <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="Industries.html"
+                    style="padding: 10px 0px;">Industries</a>
+
                 </li>
                 <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="Services.html"
                     style="padding: 10px 0px;">Services</a>
@@ -212,7 +170,7 @@
                 <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="Support.html"
                     style="padding: 10px 0px;">Support</a>
                   <div class="u-nav-popup">
-                    <ul class="text-left-mobileview-padding u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-10">
+                    <ul class="text-left-mobileview-paddingtext-left-mobileview-padding u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-10">
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Support.html#sec-b7e7"
                           data-page-id="521828048">FAQs</a>
                       </li>
@@ -226,10 +184,11 @@
         </div>
       </nav>
       <a href="index.html" class="u-image u-logo u-image-1" data-image-width="80" data-image-height="40">
-        <img src="./images/logo.jpg" class="positioninbetween u-logo-image u-logo-image-1">
+       <img src="./images/logo.jpg" class="positioninbetween u-logo-image u-logo-image-1">
       </a>
     </div>
   </header>
+  
   <section class="u-align-left u-clearfix u-section-1" id="sec-ac3a">
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <div class="u-expanded-width u-tab-links-align-justify u-tabs u-tabs-1">
@@ -493,6 +452,7 @@
       </a>. 
     </section> -->
   <script src="./Scripts/Global.js"></script>
+  <script src="./Scripts/industries.js"></script>
 </body>
 
 </html>
